duniverse/menhirLib.20200211/test/static/bad/multiple-producers-with-same-name.mly
%start<int> a
%token A
%%

a: x = A; x = A {}
