duniverse/menhirLib.20200211/test/static/bad/multiple-producers-with-same-name.exp
File "multiple-producers-with-same-name.mly", line 5, characters 10-11:
Error: there are multiple producers named x in this sequence.
